<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:id="@+id/CRASH_BUTTONS"
	  android:layout_alignParentBottom="true"
	  android:orientation="horizontal"
	  xmlns:android="http://schemas.android.com/apk/res/android">
	  <Button
	      android:layout_weight="1"
		  android:layout_width="0px"
		  android:layout_height="fill_parent"
		  android:id="@+id/CRASH_BUTTON_SEND"
		  android:text="@string/SEND"
		  xmlns:android="http://schemas.android.com/apk/res/android"/>
	  <Button
	      android:layout_weight="1"
		  android:layout_width="0px"
		  android:layout_height="fill_parent"
		  android:id="@+id/CRASH_BUTTON_PREVIEW"
		  android:text="@string/PREVIEW"
		  xmlns:android="http://schemas.android.com/apk/res/android"/>
	  <Button
	      android:layout_weight="1"
		  android:layout_width="0px"
		  android:layout_height="fill_parent"
		  android:id="@+id/CRASH_BUTTON_QUIT"
		  android:text="@string/quit"
		  xmlns:android="http://schemas.android.com/apk/res/android"/>
	</LinearLayout>
	<TextView
	  android:id="@+id/CRASH_HEADING"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_alignParentTop="true"
	  android:textSize="20sp"
	  android:text="@string/CRASH_MSG"
	  xmlns:android="http://schemas.android.com/apk/res/android"/>
	<EditText
	  android:imeOptions="actionDone"
	  android:id="@+id/CRASH_DETAILS"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_below="@id/CRASH_HEADING"
	  android:layout_above="@id/CRASH_BUTTONS"
	  android:textSize="20sp"
	  android:hint="@string/CRASH_DETAILS_HINT"
	  android:inputType="textLongMessage"
	  android:gravity="top|left"
	  xmlns:android="http://schemas.android.com/apk/res/android"/>
</RelativeLayout>

